--- a/index.html
+++ b/index.html
@@ -5,28 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="./app.js"></script>
 </head>
 <body>
    <h1>Mad Lib Story</h1>
 <div class="container">
-   <input type="text" name="" id=" "placeholder="adjective"> 
-   <input type="text" name="" id=" "placeholder="adjective">
-   <input type="text" name="" id=" "placeholder="type of  bird">
-   <input type="text" name="" id=" "placeholder="room in a house">
-   <input type="text" name="" id=" "placeholder="verb (past tense)">
-   <input type="text" name="" id=" "placeholder="verb">
-   <input type="text" name="" id=" "placeholder="relative's name">
-   <input type="text" name="" id=" "placeholder="noun">
-   <input type="text" name="" id=" "placeholder="verb ending in -ing">
-   <input type="text" name="" id=" "placeholder="part of the body (plural)">
-   <input type="text" name="" id=" "placeholder="plural noun">
-   <input type="text" name="" id=" "placeholder="verb ending in -ing">
-   <input type="text" name="" id=" "placeholder="noun">
+   <input type="text" name="" id="adjective1" placeholder="adjective"> 
+   <input type="text" name="" id="adjective2" placeholder="adjective">
+   <input type="text" name="" id="typeofbird1" placeholder="type of  bird">
+   <input type="text" name="" id="room" placeholder="room in a house">
+   <input type="text" name="" id="verb1" placeholder="verb (past tense)">
+   <input type="text" name="" id="verb2" placeholder="verb">
+   <input type="text" name="" id="name" placeholder="relative's name">
+   <input type="text" name="" id="noun1" placeholder="noun">
+   <input type="text" name="" id="verb3" placeholder="verb ending in -ing">
+   <input type="text" name="" id="bodypart1" placeholder="part of the body (plural)">
+   <input type="text" name="" id="noun2" placeholder="plural noun">
+   <input type="text" name="" id="verb4" placeholder="verb ending in -ing">
+   <input type="text" name="" id="noun3" placeholder="noun">
+   <button type= "button" onclick='createParagraph()'>Sumbit</button>
+   <div id= "answer"></div>
 </div>
 
 
 
-<p>It was a (blank) cold November day. I woke up to the (blank) smell of (blank) roasting in the downstairs. I (blank) down the stairs to see if I could help (blank) the dinner. My mom said, "See if (blank) needs a fresh (blank)." So I carried a tray of glasses full of (blank) into the (blank) room. When I got there, I couldn't believe my  (blank)! There were (blank) (blank) on the (blank)! </p>
 </body>
 </html>
