--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <script src="./app.js"></script>
 </head>
 <body>
-   <h1>Mad Lib Story</h1>
+   <div id="wrapperHeader">
+      <div id="header">
+               <img src="./MadLibs_logo_no_Phil.png" width="1000" height="200" alt="logo" id="photo"/>
+      </div> 
+  </div>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="container">
    <input type="text" name="" id="adjective1" placeholder="adjective"> 
    <input type="text" name="" id="adjective2" placeholder="adjective">
